<resources>
    <string name="app_name">E_Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_ststore">Welcome to E-Shop !</string>
    <string name="with_long_experience_in_the_audio_industry_we_create_the_best_quality_products">With long experience in the audio industry, we create the best quality products</string>
    <string name="get_started">Get Started</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_to_continue">Create an account to continue!</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed!</string>
    <string name="sign_in">SignIn</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_In">Sign In</string>
</resources>