<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="name"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SignUpFragment">

        <TextView
            android:id="@+id/getStart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/latobold"
            android:text="@string/getting_started"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/dec_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/create_an_account_to_continue"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/getStart_text"
            app:layout_constraintTop_toBottomOf="@id/getStart_text" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dec_text"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_email"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/phone"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_name"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="phone"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_phone"
            app:startIconDrawable="@drawable/ic_baseline_security_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkbox_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/_15sdp"
            android:checked="false"
            android:text="@string/by_creating_an_account_you_agree_to_our"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textField_password"
            app:layout_constraintTop_toBottomOf="@id/textField_password" />

        <TextView
            android:id="@+id/textH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/term_conditions"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkbox_register"
            app:layout_constraintTop_toBottomOf="@id/checkbox_register" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:drawableRight="@drawable/ic_action_name"
            android:inputType="text"
            android:text="Sign Up"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textH"
            app:layout_constraintVertical_bias="0.148" />

        <LinearLayout
            android:id="@+id/text_goLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btn_Google_SignUp"
            app:layout_constraintEnd_toEndOf="@+id/btn_SignUp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_SignUp"
            app:layout_constraintTop_toBottomOf="@id/btn_SignUp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_Google_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btngoogle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_SignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>